# yew-actix-chat-app-example

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/migrations/2022-01-14-015417_users/: up.sql
backend/migrations/2022-01-14-015738_rooms/: up.sql
backend/migrations/2022-01-14-015831_messages/: up.sql
backend/migrations/2022-01-14-015924_rooms_users/: down.sql  up.sql
backend/src/: lib.rs  main.rs  models.rs  route_functions.rs  schema.rs
backend/src/actors/: chat_server.rs  chat_session.rs  messages.rs  mod.rs
backend/src/db/: connection.rs  messages.rs  mod.rs  rooms.rs  users.rs
frontend/: Cargo.toml  index.html  main.scss
frontend/src/: main.rs  websocket.rs
frontend/src/components/: auth.rs  chat_app.rs  chat_bar.rs  chat_body.rs  chat_header.rs  chat_input.rs  chat_options.rs  create_account.rs  create_group.rs  create_room.rs  highlight.rs  join_request.rs  join_room.rs  join_room_requests.rs  log_in.rs  login.rs  message_bar.rs  message_component.rs  mod.rs  more_options.rs  navbar.rs  room_bar.rs  room_component.rs  show_rooms.rs  signup.rs  use_form.rs  user_details.rs
frontend/src/components2/: chat_app.rs  chat_bar.rs  chat_body.rs  chat_header.rs  chat_input.rs  chat_options.rs  create_account.rs  create_room.rs  highlight.rs  join_room.rs  join_room_requests.rs  message_bar.rs  message_component.rs  mod.rs  more_options.rs  room_bar.rs  room_component.rs  user_details.rs
frontend/src/reducers/: current_room_details.rs  current_room_messages.rs  mod.rs  room_list.rs
