[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
actix = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
futures = "0.3"
actix-web-actors = "*"
rand =  "*"
colored = "*"

futures-util = "0.3"
sanitize-filename = "0.2"
uuid = { version = "0.8", features = ["v4"] }
actix-files = "*"
actix-multipart = "0.3"