[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
yew = { git = "https://github.com/yewstack/yew/" }
reqwasm = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent", "WebSocket"] }
chrono = { version = "0.4", features = ["wasmbind"] }
weblog = "0.3.0"
futures = "*"
tokio = "*"
rand = "*"
getrandom = {version = "0.2.3", features = ["js"]}